--- a/index.html
+++ b/index.html
@@ -337,6 +337,9 @@
                   Analysis</span></li>
               <li><i class='bx bx-book-content'></i> Technical Communication <span class="skill-context">Documentation &
                   Presentation</span></li>
+              <li><i class='bx bx-book-content'></i> Time Management <span class="skill-context">prioritization &
+                  Manipulation</span>
+              </li>
             </ul>
           </div>
         </div>
