--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
             <div class="project-image-container">
               <div class="project-image placeholder-vlsi"></div>
               <div class="project-overlay">
-                <a href="#" class="view-btn">View Details</a>
+                <a href="https://github.com/25f3003706-dev/portfolio" class="view-btn">View Details</a>
               </div>
             </div>
             <div class="project-content">
               <div class="project-header">
                 <h3>Low-Power RISC-V Processor</h3>
                 <div class="project-links">
-                  <a href="#" class="github-icon" aria-label="GitHub Repo">
+                  <a href="https://github.com/25f3003706-dev/portfolio" class="github-icon" aria-label="GitHub Repo">
                     <i class='bx bxl-github' style="font-size: 1.5rem;"></i>
                   </a>
                 </div>
@@ -200,7 +200,7 @@
               <div class="project-header">
                 <h3>Edge-Deployment Neural Net</h3>
                 <div class="project-links">
-                  <a href="#" class="github-icon" aria-label="GitHub Repo">
+                  <a href="https://github.com/25f3003706-dev/portfolio" class="github-icon" aria-label="GitHub Repo">
                     <i class='bx bxl-github' style="font-size: 1.5rem;"></i>
                   </a>
                 </div>
@@ -337,12 +337,13 @@
                   Analysis</span></li>
               <li><i class='bx bx-book-content'></i> Technical Communication <span class="skill-context">Documentation &
                   Presentation</span></li>
-<<<<<<< HEAD
+
               <li><i class='bx bx-book-content'></i> Time Management <span class="skill-context">prioritization &
                   Manipulation</span>
               </li>
-=======
->>>>>>> 906bd27086164e41065ff5e205e79da4f46ef2a9
+              <li><i class='bx bx-book-content'></i> Time Management <span class="skill-context">prioritization &
+                  Manipulation</span>
+              </li>
             </ul>
           </div>
         </div>
