--- a/index.html
+++ b/index.html
@@ -341,8 +341,7 @@
               <li><i class='bx bx-book-content'></i> Time Management <span class="skill-context">prioritization &
                   Manipulation</span>
               </li>
-              <li><i class='bx bx-book-content'></i> Time Management <span class="skill-context">prioritization &
-                  Manipulation</span>
+              <li><i class='bx bx-book-content'></i> Adaptive to any AI <span class="skill-context">Prompt Engineering </span>
               </li>
             </ul>
           </div>
