--- a/index.html
+++ b/index.html
@@ -51,27 +51,30 @@
   <main>
     <!-- Hero Section -->
     <section id="home" class="hero-section">
-      <div class="hero-background" id="hero-particles"></div>
+      <div class="hero-background-gradient"></div>
+      <div class="hero-overlay"></div>
       <div class="container hero-content">
         <div class="hero-text">
-          <h1 class="hero-headline">Hello, It's YESHWANT.G.N
-            Triple Degree Engineer</h1>
-          <h2 class="hero-subheadline">VLSI <span class="divider">|</span> AI / ML <span class="divider">|</span> Data
-            Science</h2>
+          <h1 class="hero-headline">Hello, I'm <span class="highlight-name">YESHWANT.G.N</span></h1>
+          <h2 class="hero-subheadline">Triple Degree Engineer</h2>
+          <div class="hero-domains">
+            <span class="domain domain-vlsi">VLSI</span>
+            <span class="divider">|</span>
+            <span class="domain domain-ai">AI / ML</span>
+            <span class="divider">|</span>
+            <span class="domain domain-ds">Data Science</span>
+          </div>
           <p class="hero-value-prop">
             Exploring hardware, algorithms, and data to create next-gen intelligent systems.
           </p>
           <div class="hero-cta">
-            <a href="#projects" class="btn btn-primary">View Projects</a>
-            <a href="#contact" class="btn btn-secondary">Contact Me</a>
+            <a href="#projects" class="btn btn-primary btn-glow">View Projects</a>
+            <a href="#contact" class="btn btn-secondary btn-glow">Contact Me</a>
           </div>
         </div>
         <div class="hero-visual">
-          <div class="hexagon-wrapper">
-            <div class="hexagon-image">
-              <!-- Placeholder image - Replace source with your actual image -->
-              <img src="assets\photos\photo.jpeg" alt="Profile" />
-            </div>
+          <div class="profile-circle">
+            <img src="assets/photos/photo.jpeg" alt="Profile" />
           </div>
         </div>
       </div>
