--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Roboto:wght@300;400;500&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Roboto:wght@300;400;500&display=swap"
     rel="stylesheet">
 
   <!-- Boxicons CDN -->
@@ -33,8 +32,7 @@
           <li><a href="#domains">Domains</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
-          <li><a href="#timeline">Timeline</a></li>
-          <li><a href="#research">Research</a></li>
+          <li><a href="#timeline">Education</a></li>
           <li><a href="#learnings">Learnings</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -361,7 +359,7 @@
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <span class="timeline-date">2024 - Present</span>
+              <span class="timeline-date">2024 - 2028</span>
               <h3>B.E.Electrical Engineering(vlsi design)</h3>
               <h4 class="timeline-org">J.N.N.INSTITUTE OF ENGINEERING</h4>
               <p>Specialized in VLSI Design and Embedded Systems.
